# REMY-robotics-test

./: .gitignore  Dockerfile  README.md  build_docker_image.sh  build_without_docker.sh  docker-compose-local.yml  docker-compose.yml
.github/workflows/: docker-image.yml  docker-publish.yml  publish.yml
catkin_ws/src/simple_planner/: CMakeLists.txt  main.cpp  package.xml  simple_planner_node.cpp  simple_planner_node.h
catkin_ws/src/simple_scene/launch/: simple_planner.launch
catkin_ws/src/ur_robot_gripper/: .setup_assistant  CMakeLists.txt  package.xml
catkin_ws/src/ur_robot_gripper/config/: fake_controllers.yaml  gazebo_ur_robot_gazebo.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  ur_robot_gazebo.srdf
catkin_ws/src/ur_robot_gripper/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
